# templates-external

./: README.md  list.py  list.yaml  pyproject.toml  template-definition.yaml  varbase.template.yaml
templates/: droopler.template.yaml  ezplatform-beta.template.yaml  ezplatform-demo.template.yaml  ezplatform-v3.template.yaml  ezplatform.template.yaml  ezplatform.yaml  joomla-4.template.yaml  joomla-5.template.yaml  openideal.template.yaml  pizzly.yaml  redirection-io.template.yaml  restyaboard.template.yaml  sylius.template.yaml  symfony-5.4-php8.0-base.template.yaml  symfony-5.4-php8.0-webapp.template.yaml  symfony-5.4-php8.1-base.template.yaml  symfony-5.4-php8.1-webapp.template.yaml  symfony-5.4-php8.2-base.template.yaml  symfony-5.4-php8.2-webapp.template.yaml  symfony-5.4.template.yaml  symfony-6.0-php8.0-base.template.yaml  symfony-6.0-php8.0-demo.template.yaml  symfony-6.0-php8.0-webapp.template.yaml  symfony-6.0-php8.1-base.template.yaml  symfony-6.0-php8.1-demo.template.yaml  symfony-6.0-php8.1-webapp.template.yaml  symfony-6.1-php8.1-base.template.yaml  symfony-6.1-php8.1-webapp.template.yaml  symfony-6.1-php8.2-base.template.yaml  symfony-6.1-php8.2-webapp.template.yaml  symfony-6.1.template.yaml  symfony-6.2-php8.2-base.template.yaml  symfony-6.2-php8.2-demo.template.yaml  symfony-6.2-php8.2-webapp.template.yaml  symfony-6.2.template.yaml  symfony-6.3.template.yaml  symfony-7.2.template.yaml  symfony-demo.template.yaml  symfony5.template.yaml  varbase.template.yaml  (+1 more)
